syntax = "proto3";

package toko.v1;

option go_package = "toko_buku_online/api/gen/go/toko/v1;toko";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string user_id = 2;
  string role = 3;
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message RegisterRespone {
    string message = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterRespone);
}
